feat(day20): Finalize SQL parser, validator, and UI, update docs

--- a/day20_sql_parser/template.html
+++ b/day20_sql_parser/template.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <h1>SQL Validator (Go Day 20)</h1>
+    <h1>Day 20 - SQL Validator</h1>
     <p>Enter SQL to validate against the sample schema (users, products, orders). Validation occurs automatically as you type.</p>
     <textarea id="sqlInput" name="sql" placeholder="SELECT id, name FROM users ORDER BY name DESC LIMIT 5;">{{ .SQL }}</textarea><br>
     <!-- <button type="submit">Validate SQL</button> -->
